fixed db.go ln 44, updated handler and models to use custom errors, and added errorResponses as the endpoints' response, fixed deleteuser route
